# monassmat

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  SKILLS.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 1a6c9d2f4e7b_add_workday_assmat_leave_kind.py  266d8bc76cfe_init.py  4d2b1a7c3f8e_add_contract_name.py  5e7d2c9a4f21_add_workday_times_fees.py  7b3f9c8a2e1b_add_contract_settings_fields.py  8c4f3e0a2d1b_add_workday_holiday_kind.py  9c2e4f7a1b6d_add_contract_settings_snapshot.py
frontend/static/: app.css  calendar.js  contracts.js
frontend/templates/: base.html  calendar.html  contract_new.html  contract_settings.html  contracts_summary.html  settings_snapshot_form.html  year_summary_page.html
frontend/templates/partials/: bulk_form.html  day_form.html  day_panel.html  month_summary.html  year_summary.html
scripts/: db_backup.py  db_restore.py  docker-entrypoint.sh  import_assmat_tracker.py  seed.py
src/monassmat/: app.py  calculations.py  config.py  crud.py  db.py  models.py  schemas.py
tests/: test_calculations.py  test_settings_history.py
